<resources>
    <string name="app_name">Note-Taking</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="enter_note_title">Enter Note Title</string>
    <string name="enter_note">Enter Note</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="developer">Developer</string>
    <string name="list_developer">List of Developer</string>
    <string name="csc_3111_mobile_application_development">CSC 3111: Mobile Application Development</string>
    <string name="group_1_mobile_note_taking_application">(Group 1) Mobile Note-Taking Application</string>
    <string-array name="developers">
        <item>Quijoy, Mirabel: Leader/Documentation</item>
        <item>Jabaybay, Belen: Developer/Documentation</item>
        <item>Manigos, Chiantine: Main Developer/Documentation</item>
        <item>Elemino, Nelson: Developer/Documentation</item>
        <item>Guillano, Leonardo: Developer/Documentation</item>
        <item>Sochong, Jasper Kent: Developer/Documentation</item>
        <item>Galindo, Fhel Niño: Developer/Documentation</item>
    </string-array>
</resources>