<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:context=".AddNoteActivity">

        <EditText
            android:id="@+id/editTextTitleUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_note_title"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/editTextDescriptionUpdate"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/enter_note"
            android:inputType="textMultiLine"
            android:autofillHints="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonCancelUpdate"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_700"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonSaveUpdate"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_700"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>