<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".DevelopersActivity">

    <TextView
        android:id="@+id/textViewGroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/csc_3111_mobile_application_development"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewGroup2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/group_1_mobile_note_taking_application"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/listViewDevelopers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButtonClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:contentDescription="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_close_24"
            tools:ignore="ImageContrastCheck"
            android:focusable="true" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>